# learn_pandas_bot

./: .dockerignore  .env.example  .gitignore  ALPHAVPS_SETUP.md  API_DOCUMENTATION.md  CLAUDE.md  DATASETS_GUIDE.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prod  MEMORY_OPTIMIZATION.md  MINIAPP_DEPLOY.md  MULTIPLE_CHOICE_GUIDE.md  Makefile  PYODIDE_INTEGRATION.md  README.md  add_more_questions.py  add_python_tasks.py  add_questions.py  create_topic.py  docker-compose.dev.yml  docker-compose.prod.lite.yml  docker-compose.prod.yml  docker-compose.yml  init_django.py  manage.py  pyproject.toml  pytest.ini  run_bot.py  setup.sh
.github/workflows/: ci.yml  deploy.yml
api/: serializers.py  urls.py  views.py  views_drf.py
bot/: admin.py  models.py  urls.py  utils.py  views.py
bot/migrations/: 0001_initial.py  0002_userprogress_documentation_viewed.py  0003_set_default_topics.py
data/: .gitkeep
docs/: CHOOSING_VPS.md  VPS_QUICK_CHECK.md
nginx/: nginx.conf
nginx/conf.d/: default.conf  default.http-only.conf.example
nginx/ssl/: .gitkeep
pandas_bot/: asgi.py  health.py  settings.py  urls.py  wsgi.py
pandas_bot/settings/: __init__.py  base.py  development.py  production.py
questions/: admin.py  models.py
questions/migrations/: 0001_initial.py  0002_topic_documentation.py  0003_question_hint_question_starter_code_and_more.py  0004_dataset.py  (+5 more)
scripts/: backup.sh  deploy.sh  deploy_miniapp.sh  init_server.sh  rollback.sh  setup_swap.sh
webapp/: .env.production  README.md  package-lock.json  package.json  vite.config.js
webapp/src/: App.css  (+2 more)
(+11 files in other folders)
